Fixed wrapping issues on More Apps screen. Added 480, 320 classes to support scaling.

--- a/tapjoyads/public/stylesheets/sass/marketplace/resources/base.scss
+++ b/tapjoyads/public/stylesheets/sass/marketplace/resources/base.scss
@@ -45,6 +45,22 @@ input:placeholder {
   clear: both;
 }
 
+.w25p {
+  width: 25% !important;
+}
+
+.w50p {
+  width: 50% !important;
+}
+
+.w75p {
+  width: 75% !important;
+}
+
+.w100p {
+  width: 100% !important;
+}
+
 .w25 {
   width: 25px;
 }
