--- a/tapjoyads/public/stylesheets/sass/marketplace/theme/tjm/style-768.scss
+++ b/tapjoyads/public/stylesheets/sass/marketplace/theme/tjm/style-768.scss
@@ -52,6 +52,7 @@ $image_path: "/images/marketplace/themes/tjm";
 }
 
 
+
 #recommendations .app,
 div.app {
   border-top: 1px solid #fff;
@@ -84,11 +85,19 @@ div.app {
     margin-left: 10px;
     text-align: left;
     float: left;
+    width: 75%;
   }
 
   span.title {
     padding-left: 2px;
     margin-bottom: 5px;
+  }
+  
+  small.description {
+    float: left;
+    display: block;
+    height: 30px;
+    width: 75%;
   }
 
   small.publisher,
